--- a/csgo.css
+++ b/csgo.css
@@ -1,10 +1,8 @@
-<style>
 	body {
-		background-color: black;
 		font-family: Verdana;
-		overflow:hidden;
+		background-color: black;
 	}
-	
+
 	.a {
 		width: 700px;
 		background-color: #fff;
@@ -12,7 +10,6 @@
 		margin-left: auto;
 		margin-right: auto;
 		height: 700px;
-		box-shadow: -20px 20px 40px white;
 	}
 
 	.b {
@@ -20,19 +17,21 @@
 		padding: 20px;
 		background-color: black;
 		color: white;
+		box-shadow: -20px 20px 40px white;
+		background-color: black;
 	}
 
 	p {	
 		line-height: 1.5em;
 		font-size: 14pt;
 	}
-			
+
 	img {
 		float: left;
 		margin-right: 20px;
 		margin-bottom: 5px;
 	}
-			
+
 	ul {
 		list-style-type: none;
 		margin: 0;
@@ -57,12 +56,27 @@
 	li a.ex1:hover {
 		background-color: white;
 		color: black;
+		padding-bottom: 10px;
 	}
-	
+
 	.current {
 		background-color: grey;
 	}
 	
-	
-
-<style>
+	table, th, td {
+		border: 2px solid navy;
+		border-collapse: collapse;
+		padding: 10px;
+	}
+		
+	table {
+		width: 200;
+	}
+		
+	th {
+		background-color: lime;
+	}
+		
+	td:hover {
+		background-color: grey;
+	}
