--- a/csgo.css
+++ b/csgo.css
@@ -3,21 +3,21 @@
 		background-color: black;
 	}
 
-	.a {
+	.container {
 		width: 700px;
-		background-color: #fff;
-		border: 10px solid #000;
+		border: 10px solid navy;
 		margin-left: auto;
 		margin-right: auto;
-		height: 700px;
+		height: 100%;
+		width: 100%;
+		float: center;
 	}
 
-	.b {
+	.content {
 		width: 660px;
 		padding: 20px;
 		background-color: black;
 		color: white;
-		box-shadow: -20px 20px 40px white;
 		background-color: black;
 	}
 
@@ -56,7 +56,6 @@
 	li a.ex1:hover {
 		background-color: white;
 		color: black;
-		padding-bottom: 10px;
 	}
 
 	.current {
