--- a/csgo.css
+++ b/csgo.css
@@ -5,12 +5,11 @@
 
 	.container {
 		width: 700px;
+		height: 700px;
 		border: 10px solid navy;
 		margin-left: auto;
 		margin-right: auto;
-		height: 100%;
-		width: 100%;
-		float: center;
+		float: ;
 	}
 
 	.content {
@@ -42,6 +41,7 @@
 
 	li {
 		float: left;
+		width: 175px;
 	}
 	
 	img {
@@ -52,6 +52,7 @@
 		display: block;
 		color: white;
 		text-align: center;
+		padding: 14px 16px;
 		padding: 10px;
 		text-decoration: none;
 	}
