--- a/csgo.css
+++ b/csgo.css
@@ -1,15 +1,15 @@
-	body {
+		body {
 		font: 100% Helvetica, sans-serif;
 		background-color: black;
 	}
 
 	.container {
+		overflow: hidden;
 		width: 700px;
-		height: 700px;
+		height: 100%;
 		border: 10px solid navy;
 		margin-left: auto;
 		margin-right: auto;
-		float: ;
 	}
 
 	.content {
@@ -79,7 +79,8 @@
 	}
 		
 	table {
-		width: 300;
+		width: 2000;
+		height: 700px;
 	}
 		
 	th {
