--- a/csgo.css
+++ b/csgo.css
@@ -1,4 +1,4 @@
-		body {
+	body {
 		font: 100% Helvetica, sans-serif;
 		background-color: black;
 	}
@@ -29,6 +29,7 @@
 		float: right;
 		margin-right: 20px;
 		margin-bottom: 5px;
+		border: 5px solid navy;
 	}
 
 	ul {
@@ -44,10 +45,6 @@
 		width: 175px;
 	}
 	
-	img {
-		border: 5px solid navy;
-	}
-	
 	li a {
 		display: block;
 		color: white;
@@ -56,7 +53,7 @@
 		padding: 10px;
 		text-decoration: none;
 	}
-
+	
 	li a.ex1:hover {
 		background-color: black;
 		-webkit-animation: color-change 1s infinite;
@@ -84,6 +81,11 @@
 	}
 		
 	th {
+		-webkit-animation: color-change 1s infinite;
+		-moz-animation: color-change 1s infinite;
+		-o-animation: color-change 1s infinite;
+		-ms-animation: color-change 1s infinite;
+		animation: color-change 1s infinite;
 		background-color: lime;
 	}
 		
