--- a/csgo.css
+++ b/csgo.css
@@ -1,6 +1,7 @@
 	body {
 		font: 100% Helvetica, sans-serif;
 		background-color: black;
+		background-image: url('csgobackground.jfif');
 	}
 
 	.container {
