--- a/csgo.css
+++ b/csgo.css
@@ -2,8 +2,8 @@
 		font: 100% Helvetica, sans-serif;
 		background-color: black;
 		background-image: url('csgobackground.jfif');
-		background-repeat: no-repeat:
-		background-position: fixed:
+		background-repeat: no-repeat;
+		background-position: fixed;
 	}
 
 	.container {
